# riida

./: .claudeignore  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  THIRD-PARTY-LICENSES-js.md  THIRD-PARTY-LICENSES-rust.md  THIRD-PARTY-LICENSES.md  TODO.md  deny.toml  flake.nix  index.html  knip.json  package-lock.json  package.json  riida.toml  riida.toml.example  stryker.config.json  tsconfig.json  viewer.html  vite.config.ts
.cargo/: mutants.toml
.codex/skills/riida-release-prep/: SKILL.md
.github/: dependency-review-config.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: docs.yml  license-check.yml  nightly.yml  release-linux.yml  release-macos.yml  release-windows.yml  test-rust.yml  test.yml
docs/: ADR-01_search-query.md  ADR-02_shelves.md  ADR-03_time-based-search.md  epub.md  fulltext-search-design.md  pdf.md
docs/metadata-bridge/: README.md  instructions.md  mcp.json  riida-metadata.agent.yaml
docs/notes/: 20260504_book-list-scroll-perf.md
e2e/: wdio.conf.js
e2e/specs/: boot.e2e.js
manual/: astro.config.mjs  package-lock.json  package.json
manual/src/styles/: custom.css
mcp-server/: README.md  package-lock.json  package.json  start.sh  tsconfig.json
mcp-server/src/: index.ts  server.test.ts
public/: epub-link-bridge.js
scripts/: fetch-pdfium.mjs  fix-macos-local-build.sh  generate-third-party-licenses.mjs  report-bundle-size.mjs  run-cargo-mutants.sh
skills/internal/riida-dependency-update/: SKILL.md
skills/internal/riida-release-prep/: SKILL.md
skills/riida-metadata-enrichment/: SKILL.md
skills/riida-metadata-enrichment/evals/: eval.yaml
skills/riida-metadata-enrichment/references/: rules.md
skills/riida-metadata-enrichment/tests/: trigger_tests.yaml
src/: app-config-utils.test.ts  app-config-utils.ts  app-theme.test.ts  app-theme.ts  book-metadata-utils.test.ts  book-metadata-utils.ts  cjk-radical-map.ts  debounce-utils.test.ts  debounce-utils.ts  dom-form-utils.test.ts  dom-form-utils.ts  epub-image-layout-utils.test.ts  epub-image-layout-utils.ts  epub-link-routing.test.ts  epub-link-routing.ts  epub-locations-cache.test.ts  epub-locations-cache.ts  epub-page-utils.test.ts  epub-page-utils.ts  epub-runtime.ts  fulltext-ui.test.ts  fulltext-ui.ts  library-utils.test.ts  library-utils.ts  main-viewer.test.ts  main-viewer.ts  main.boot.test.ts  main.ts  navigation-shortcuts.test.ts  navigation-shortcuts.ts  navigation-utils.test.ts  navigation-utils.ts  note-editor.ts  note-window-utils.test.ts  note-window-utils.ts  page-jump-utils.test.ts  page-jump-utils.ts  pdf-binding-detect.test.ts  pdf-binding-detect.ts  pdf-link-utils.test.ts  (+36 more)
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/capabilities/: default.json  viewer.json
src-tauri/examples/: fulltext_profile.rs
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/pdfium/: .gitkeep
src-tauri/src/: epub_image.rs  fulltext.rs  fulltext_extract.rs  fulltext_pool.rs  lib.rs  main.rs
src-tauri/tests/: pdfium_spike.rs
(+24 files in other folders)
