[package]
name = "riida"
version = "0.6.2"
description = "Tauri-based local PDF library manager for Dropbox-hosted ebooks"
authors = ["zonuexe"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "riida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
notify = "8"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
globset = "0.4"
unicode-normalization = "0.1"
quick-xml = "0.39.2"
zip = "8.5.1"
tantivy = { version = "0.25", features = ["zstd-compression"] }
lindera = { version = "2.0.1", features = ["embed-ipadic"] }
lindera-tantivy = { version = "2.0.0", features = ["embed-ipadic"] }
pdfium-render = { version = "0.9", default-features = false, features = ["thread_safe", "pdfium_7543"] }

[dev-dependencies]
proptest = "1"

# Profiling builds (`cargo build --profile profiling --example fulltext_profile`):
# release-grade optimization but with debug symbols for samply/Instruments and
# faster codegen settings so the measure-tune loop stays quick.
[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = "thin"
codegen-units = 16

[profile.release]
# Optimize the shipped desktop binary for size and speed. LTO with a single
# codegen unit lets the optimizer work across crate boundaries, and stripping
# symbols trims the bundle. These only affect `tauri build`, not dev or test.
lto = true
codegen-units = 1
strip = true
